# diktyo

./: .env  Dockerfile  cargo.toml  docker-compose.yml  todo.md
.github/workflows/: prod.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 20230916023941_create_basic_models.sql
backend/src/: authentication.rs  lib.rs  main.rs
backend/src/services/bike/: get.rs  post.rs
backend/src/services/user/: get.rs  post.rs
backend/src/services/ws/: mod.rs
bibe_server/: Cargo.toml
bibe_server/src/: authentication.rs  main.rs
bibe_server/src/services/: mod.rs
bibe_server/src/services/s3/: mod.rs
bibe_server/src/services/user/: get.rs
bibe_server/src/services/ws/: mod.rs
clients/bike/: Cargo.toml
clients/bike/src/: lib.rs  main.rs
clients/bike/src/fsm/: drink_dispenser.rs  mod.rs
clients/bike/src/gpio/: mod.rs
clients/desktop/: Cargo.toml
clients/desktop/src/: lib.rs  main.rs
clients/drink_dispenser/: Cargo.toml
clients/drink_dispenser/src/: errors.rs  lib.rs  main.rs
clients/drink_dispenser/src/fsm/: drink_dispenser.rs
clients/drink_dispenser/src/gpio/: mod.rs
crates/bibe_models/: Cargo.toml
crates/bibe_models/src/: bike.rs  lib.rs  maintainance.rs  message.rs  payment.rs  rental_session.rs
